--- a/playlists.css
+++ b/playlists.css
@@ -3,11 +3,15 @@
     position: fixed;
     height: 100%;
     z-index: 1;
+    -webkit-transition: margin-left 0.5s;
+    transition: margin-left 0.5s;
 }
 
 .col-offset-240 {
     padding-left: 255px;
     z-index: 0;
+    -webkit-transition: padding-left 0.5s;
+    transition: padding-left 0.5s;
 }
 
 .panel{
@@ -29,5 +33,5 @@ body { padding-top: 55px; }
     padding-left: 30px;
 }
 .no-playlists .col-fixed-240{
-    display: none;
+    margin-left: -240px;
 }
