Add example on playlist name edit

--- a/playlists.css
+++ b/playlists.css
@@ -14,24 +14,34 @@
     transition: padding-left 0.5s;
 }
 
-.panel{
+.panel {
     margin: 10px;
+    border: solid 1px grey;
 }
-
-.playlist-btn{
+.panel-heading{
+    font-size: 22px;
+}
+.playlist-btn {
     visibility: hidden;
 }
 
-.list-group-item:hover .playlist-btn{
+.list-group-item:hover .playlist-btn {
     visibility: visible;
 }
 
-body { padding-top: 55px; }
+body {
+    padding-top: 55px;
+}
 
-
-.no-playlists .col-offset-240{
+.no-playlists .col-offset-240 {
     padding-left: 30px;
 }
-.no-playlists .col-fixed-240{
+
+.no-playlists .col-fixed-240 {
     margin-left: -240px;
+}
+
+.list-group-item {
+    height: 56px;
+    font-size: 19;
 }
