--- a/artists.css
+++ b/artists.css
@@ -1,3 +1,10 @@
 body {
     padding-top: 55px;
 }
+
+.flex-container{
+    display: inline-flex;
+    width: 100%;
+    flex-wrap: wrap;
+    justify-content: center;
+}
