--- a/artists.css
+++ b/artists.css
@@ -6,5 +6,6 @@ body {
     display: inline-flex;
     width: 100%;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-around;
+/*    justify-content: center;*/
 }
